--- a/public/style.css
+++ b/public/style.css
@@ -334,6 +334,24 @@ input[type="message"]:focus {
 
 }
 
+.App-header {
+  background-color: #222;
+  height: 50px;
+  padding: 10px;
+  color: white;
+}
+
+.App-intro {
+  font-size: small;
+  margin: 0;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+
 
     
     
