--- a/public/style.css
+++ b/public/style.css
@@ -6,6 +6,47 @@ body {
   background-size: cover;
   overflow: hidden;
 }
+.phase1 {
+  width: 25%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid;
+  display: block;
+  margin-left: -775px;
+}
+.phase2 {
+  width: 25%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid;
+  display: block;
+  margin-left: -257px;
+}
+
+.phase3 {
+  width: 25%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid;
+  display: block;
+  margin-left: 257px;
+}
+.phase4 {
+  width: 25%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 1px solid;
+  display: block;
+  margin-left: 775px;
+}
+
+table {
+  table-layout: fixed;
+  width: 100%;
+}
+th {
+  width: 25%;
+}
 
 .Tasks {
   float: right;
