some changes in the side nav

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://lh3.googleusercontent.com/proxy/v1oy5nQeVAih26AqCG1qIHt_cQlL8daKhK8QxOpVjmzYcrit_S2a7JcfKSf-LSWaj8bePdGY8l8qkI-rLAZAP3l2DJgB7BTS3gd-uSVj");
+  background-image: url('https://i.postimg.cc/kXq9Qmnj/bgd1.jpg');
  
   background-size: cover;
   min-width:  100%;
