--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://i.postimg.cc/kXq9Qmnj/bgd1.jpg');
+  background-image: url('https://wallpapercave.com/wp/wp7039135.png');
  
   background-size: cover;
   min-width:  100%;
