--- a/src/Components/Dashboard/style.css
+++ b/src/Components/Dashboard/style.css
@@ -1,5 +1,5 @@
 .sidebar-menu{
-    background-color: #343a40;
+    background-color: rgba(0, 0, 0, 0.85);
 }
 .active-item , .inactive-item {
     color : white ;
