--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('https://wallpapercave.com/wp/wp7039135.png');
+  background-image: url('https://images.unsplash.com/photo-1548337138-e87d889cc369?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1072&q=80');
  
   background-size: cover;
   min-width:  100%;
@@ -8,7 +8,6 @@ body {
   background-repeat: no-repeat;
   
 }
-
 .phase1 {
   width: 25%;
   margin-top: 5px;
