--- a/src/Components/Dashboard/style.css
+++ b/src/Components/Dashboard/style.css
@@ -89,4 +89,12 @@ body{
   font-size:14px;
  
 }
+.pulse:hover, 
+.pulse:focus {
+  animation: pulse 1s;
+  box-shadow: 0 0 0 2em rgba(#fff,0);
+}
 
+@keyframes pulse {
+  0% { box-shadow: 0 0 0 0 var(--hover); }
+}
