--- a/src/Components/Dashboard/style.css
+++ b/src/Components/Dashboard/style.css
@@ -3,12 +3,12 @@
 }
 .active-item,
 .inactive-item {
-  color: white;
+  color: black;
   font-size: 16px;
 }
 
 input {
-  color: white !important;
+  color: black !important;
 }
 body{
   padding:0;
@@ -49,7 +49,7 @@ body{
   width:100%;
   font-family:Helvetica;
   color:#fff;
-  background:rgba(0,0,0,0.13);
+  background:rgba(26, 39, 82, 0.13);
   padding:30px 0px;
 }
 .box h1{
