--- a/public/style.css
+++ b/public/style.css
@@ -64,6 +64,7 @@ th {
 .input {
   border: 2px solid #eee;
   border-radius: 5px;
+  color:white !important ;
   background-color: #eee;
   padding: 10px;
   margin: 0 auto;
@@ -228,6 +229,10 @@ input[type="message"]:focus {
 #dashboard {
   display: flex;
   height: 100vh;
+}
+
+.loginInput{
+  color: white !important ;
 }
 .sidebar-menu {
   text-align: center;
